@@ -1908,6 +1908,7 @@ def _do_pulldom_parse(func, args, kwargs):
     toktype, rootNode = events.getEvent()
     events.expandNode(rootNode)
     events.clear()
+    rootNode.normalize()
     return rootNode
 
 def parse(file, parser=None, bufsize=None):
